@@ -1,3 +1,4 @@
+	* fixed error reporting issue in disk I/O thread
 	* fixed file allocation issues on linux
 	* fixed filename encoding and decoding issue on platforms using iconv
 	* reports redundant downloads to tracker, fixed downloaded calculation to
